--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,57 @@
+# Site settings
 theme: jekyll-theme-minimal
 title: Tech | Design
+timezone: Asia/Shanghai
+header-img: 
+keyword: "NONE"
+url: "https://adorablelake.github.io/AdorableLake/"          # your host, for absolute URL
+baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
+
+
+# Sidebar settings
+sidebar: true                           # whether or not using Sidebar.
+sidebar-about-description: "记忆之中没有辛苦，只有遗憾"
+sidebar-avatar: /img/touxiang2.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+
+
+# SNS settings
+RSS: false
+# weibo_username:     NONE
+#zhihu_username:     xie-yu-wei-35
+github_username:    adorablelake
+#facebook_username:  NONE
+#jianshu_username:   NONE
+#instagram_username:  billy_whynot
+
+
+# Build settings
+# from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
+permalink: pretty
+paginate: 12
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+
+
+# Gems
+# from PR#40, to support local preview for Jekyll 3.0
+gems: [jekyll-paginate]
+
+
+# Markdown settings
+# replace redcarpet to kramdown,
+# although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
+# document: http://jekyllrb.com/docs/configuration/#kramdown
+markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM                            # use Github Flavored Markdown !important
+
+
+# Featured Tags
+featured-tags: true                     # 是否使用首页标签
+featured-condition-size: 2              # 相同标签数量大于这个数，才会出现在首页
+
+
+# Progressive Web Apps
+chrome-tab-theme-color: "#000000"
+service-worker: true
