--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,22 @@
 # Site settings
-# theme: jekyll-theme-minimal
 remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-title: Tech | Design
-timezone: Asia/Shanghai
+# plugins: - jekyll-remote-theme # add this line to the plugins list if you already have one
+title: [Code | Design]
+description: [Keep recording my experience]
 header-img: 
 keyword: "NONE"
 url: "https://adorablelake.github.io/AdorableLake/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 
 
-# Sidebar settings
-# sidebar: true                           # whether or not using Sidebar.
-#sidebar-about-description: ""
-#sidebar-avatar: /img/touxiang2.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
-
-
 # SNS settings
 RSS: false
 # weibo_username:     NONE
-#zhihu_username:     xie-yu-wei-35
+#zhihu_username:     NONE
 github_username:    adorablelake
 #facebook_username:  NONE
 #jianshu_username:   NONE
-#instagram_username:  billy_whynot
+#instagram_username:  NONE
 
 
 # Build settings
